Fixed defect: if replace tag attributes replacement and substring values are identical. And added test cases for @link markup tag.